--- a/index.html
+++ b/index.html
@@ -5,35 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="css/main.css" rel="stylesheet">
+    <title>Guía de Hoteles</title>
+
   </head>
   <body>
-    <div class="mt-4 p-5 bg-primary text-white rounded">
+    <div class="jumbotron">
       <h1>Hoteles</h1>
       <p>Lorem ipsum...</p>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-12 col-sm-4">
-          <h1>Titulo</h1>
-          <h2>SubTitulo</h2>
-          <p>Lorem Ipsum ....... .... .. .. . . .. . . . ..  </p>
-          <button type="button" class="btn btn-primary">Primary</button>
-        </div>
-        <div class="col-12 col-sm-4">
-          <h1>Titulo</h1>
-          <h2>SubTitulo</h2>
-          <p>Lorem Ipsum ....... .... .. .. . . .. . . . ..  </p>
-          <button type="button" class="btn btn-primary">Primary</button>
-        </div>
-        <div class="col-12 col-sm-4">
-          <h1>Titulo</h1>
-          <h2>SubTitulo</h2>
-          <p>Lorem Ipsum ....... .... .. .. . . .. . . . ..  </p>
-          <button type="button" class="btn btn-primary">Primary</button>
-
-        </div>
+      <div class="d-flex flex-wrap flex-row-reserve">
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h2>Titulo</h2>
+            <h3>SubTitulo</h3>
+            <p>Lorem Ipsum ....... .... .. .. . . .. . . . ..  </p>
+          </div>
+          <div>            
+            <button type="button" class="btn btn-primary btn-reserve">Primary</button>
+          </div>
+        </div>        
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h2>Titulo</h2>
+            <h3>SubTitulo</h3>
+            <p>Lorem Ipsum ....... .... .. .. . . .. . . . ..  </p>
+          </div>
+          <div>            
+            <button type="button" class="btn btn-primary btn-reserve">Primary</button>
+          </div>
+        </div>        
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h2>Titulo</h2>
+            <h3>SubTitulo</h3>
+            <p>Lorem Ipsum ....... .... .. .. . . .. . . . ..  </p>
+          </div>
+          <div>            
+            <button type="button" class="btn btn-primary btn-reserve">Primary</button>
+          </div>
+        </div>        
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h2>Titulo</h2>
+            <h3>SubTitulo</h3>
+            <p>Lorem Ipsum ....... .... .. .. . . .. . . . ..  </p>
+          </div>
+          <div>            
+            <button type="button" class="btn btn-primary btn-reserve">Primary</button>
+          </div>
+        </div>        
+        <div class="card-hotel d-flex flex-column justify-content-between">
+          <div>
+            <h2>Titulo</h2>
+            <h3>SubTitulo</h3>
+            <p>Lorem Ipsum ....... .... .. .. . . .. . . . ..  </p>
+          </div>
+          <div>            
+            <button type="button" class="btn btn-primary btn-reserve">Primary</button>
+          </div>
+        </div>        
       </div>
     </div>
+    <footer>
+      <div class="row">        
+        <div class="col-sm-4">Redes Sociales</div>
+        <div class="col-sm-4">
+          <address>Dirección</address>
+        </div>
+        <div class="col-sm-4">
+          Enlaces
+        </div>
+      </div>
+    </footer>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
